--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,1 @@
-npm-debug.log
-node_modules/
-sftp-config.json
-public/css/*.css
-*.sublime-project
-*.sublime-workspace
-.project
-.idea
-*.swp
-Vagrantfile
-.vagrant
-provision.sh
-*.komodoproject
-
+/node_modules
