--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "webcage",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "name": "socket",
+  "version": "0.0.0",
+  "private": true,
   "dependencies": {
-    "express": "^4.17.1",
-    "moment": "^2.29.1",
-    "socket.io": "^3.1.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.7"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "ejs": "^2.6.1",
+    "express": "~4.16.1",
+    "express-ejs-layouts": "^2.5.0",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1",
+    "pug": "^2.0.3",
+    "socket.io": "^2.2.0"
   }
 }
