--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "private": true,
   "license": "BSD",
   "dependencies": {
-    "express": "~4.17.1",
-    "socket.io": "^4.0.0"
+    "express": "^4.13.4",
+    "socket.io": "^2.2.0"
   },
   "scripts": {
     "start": "node index.js"
