--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "socket.io-chat",
-  "version": "0.0.0",
-  "description": "A simple chat client using socket.io",
+  "name": "testserversocket",
+  "version": "1.0.0",
+  "description": "This is my 1st sample for SocketIO server",
   "main": "index.js",
-  "author": "Grant Timmerman",
-  "private": true,
-  "license": "BSD",
-  "dependencies": {
-    "express": "~4.17.1",
-    "socket.io": "^4.0.0"
-  },
   "scripts": {
-    "start": "node index.js"
-  }
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Tristan Vegas",
+  "license": "MIT",
+  "dependencies": {
+    "eiows": "^3.6.1",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "socket.io": "^4.1.3"
+  },
+  "keywords": [
+    "node",
+    "heroku",
+    "express"
+  ]
 }
