--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
 {
-  "name": "webcage",
+  "name": "node_chat",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/Leesungsup/node_chat.git"
+  },
+  "author": "Seungsup",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1",
-    "moment": "^2.29.1",
-    "socket.io": "^3.1.2"
+  "bugs": {
+    "url": "https://github.com/Leesungsup/node_chat/issues"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.7"
+  "homepage": "https://github.com/Leesungsup/node_chat#readme",
+  "dependencies": {
+    "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
+    "child_process": "^1.0.2",
+    "connect": "^3.7.0",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.1",
+    "fs": "0.0.1-security",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
+    "socket.io": "^4.1.3",
+    "ws": "^8.8.1"
   }
 }
